--- a/index.html
+++ b/index.html
@@ -56,25 +56,34 @@
                 <div class="features-container container">
                     <ul class="features-list">
                         <li class="feature-list-item">  
+                            <div class="feature-image-container">
+                                <img class="feature-list-img" src="images/icons/antenna 1.svg"/> 
+                            </div>
                             <h3 class="feature-item-title">Strategy</h3>
                             <p class="feature-item-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                         </li>
                         <li class="feature-list-item">
+                            <div class="feature-image-container">
+                                <img class="feature-list-img" src="images/icons/clock 1.svg"/> 
+                            </div>  
                             <h3 class="feature-item-title">Punctuality</h3>
                             <p class="feature-item-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
                         <li class="feature-list-item">
+                            <div class="feature-image-container">
+                                <img class="feature-list-img" src="images/icons/diagram 1.svg"/>
+                            </div>
                             <h3 class="feature-item-title">Diligence</h3>
                             <p class="feature-item-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
                         <li class="feature-list-item">
+                            <div class="feature-image-container">
+                                <img class="feature-list-img" src="images/icons/astronaut 1.svg"/>
+                            </div>
                             <h3 class="feature-item-title">Technologies</h3>
                             <p class="feature-item-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                         </li>
-
                     </ul>
-
-
                 </div>
             </section>
 
