--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Webstudio</title>
+        <link rel="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
         <link rel="stylesheet" href="./css/style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,28 +58,28 @@
                     <ul class="features-list">
                         <li class="feature-list-item">  
                             <div class="feature-image-container">
-                                <img class="feature-list-img" src="images/icons/antenna 1.svg"/> 
+                                <img class="feature-list-img" src="images/icons/antenna1.svg"/> 
                             </div>
                             <h3 class="feature-item-title">Strategy</h3>
                             <p class="feature-item-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                         </li>
                         <li class="feature-list-item">
                             <div class="feature-image-container">
-                                <img class="feature-list-img" src="images/icons/clock 1.svg"/> 
+                                <img class="feature-list-img" src="images/icons/clock1.svg"/> 
                             </div>  
                             <h3 class="feature-item-title">Punctuality</h3>
                             <p class="feature-item-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
                         <li class="feature-list-item">
                             <div class="feature-image-container">
-                                <img class="feature-list-img" src="images/icons/diagram 1.svg"/>
+                                <img class="feature-list-img" src="images/icons/diagram1.svg"/>
                             </div>
                             <h3 class="feature-item-title">Diligence</h3>
                             <p class="feature-item-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
                         <li class="feature-list-item">
                             <div class="feature-image-container">
-                                <img class="feature-list-img" src="images/icons/astronaut 1.svg"/>
+                                <img class="feature-list-img" src="images/icons/astronaut1.svg"/>
                             </div>
                             <h3 class="feature-item-title">Technologies</h3>
                             <p class="feature-item-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -123,28 +124,28 @@
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#instagram 2"/>
+                                                <use href="images/icons.svg#instagram2"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item"> 
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#twitter 1"/>
+                                                <use href="images/icons.svg#twitter1"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#facebook 1"/>
+                                                <use href="images/icons.svg#facebook1"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#linkedin 1"/>
+                                                <use href="images/icons.svg#linkedin1"/>
                                             </svg>
                                         </a>
                                     </li>
@@ -160,28 +161,28 @@
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#instagram 2"/>
+                                                <use href="images/icons.svg#instagram2"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item"> 
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#twitter 1"/>
+                                                <use href="images/icons.svg#twitter1"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#facebook 1"/>
+                                                <use href="images/icons.svg#facebook1"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#linkedin 1"/>
+                                                <use href="images/icons.svg#linkedin1"/>
                                             </svg>
                                         </a>
                                     </li>
@@ -197,28 +198,28 @@
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#instagram 2"/>
+                                                <use href="images/icons.svg#instagram2"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item"> 
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#twitter 1"/>
+                                                <use href="images/icons.svg#twitter1"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#facebook 1"/>
+                                                <use href="images/icons.svg#facebook1"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#linkedin 1"/>
+                                                <use href="images/icons.svg#linkedin1"/>
                                             </svg>
                                         </a>
                                     </li>
@@ -234,28 +235,28 @@
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#instagram 2"/>
+                                                <use href="images/icons.svg#instagram2"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item"> 
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#twitter 1"/>
+                                                <use href="images/icons.svg#twitter1"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#facebook 1"/>
+                                                <use href="images/icons.svg#facebook1"/>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-links-item">
                                         <a href="#" class="team-link">
                                             <svg>
-                                                <use href="images/icons.svg#linkedin 1"/>
+                                                <use href="images/icons.svg#linkedin1"/>
                                             </svg>
                                         </a>
                                     </li>
@@ -342,28 +343,28 @@
                         <li class="footer-socmed-list-items">
                             <a href="#" class="footer-socmed-link">
                                 <svg>
-                                    <use href="images/icons.svg#footer-instagram 2"/>
+                                    <use href="images/icons.svg#footer-instagram2"/>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-socmed-list-items">
                             <a href="#" class="footer-socmed-link">
                                 <svg>
-                                    <use href="images/icons.svg#footer-twitter 1"/>
+                                    <use href="images/icons.svg#footer-twitter1"/>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-socmed-list-items">
                             <a href="#" class="footer-socmed-link">
                                 <svg>
-                                    <use href="images/icons.svg#footer-facebook 1"/>
+                                    <use href="images/icons.svg#footer-facebook1"/>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-socmed-list-items">
                             <a href="#" class="footer-socmed-link">
                                 <svg>
-                                    <use href="images/icons.svg#footer-linkedin 1"/>
+                                    <use href="images/icons.svg#footer-linkedin1"/>
                                 </svg>
                             </a>
                         </li>
