--- a/portfolio.html
+++ b/portfolio.html
@@ -67,67 +67,85 @@
                     <div class="portfolio-nav-list">
                         <ul class="port-list">
                             <li class="port-list-item">
-                                <img src="./images/port1.jpeg" alt="Banking App Interface Concept" >
-                                <div class="port-description">
-                                    <h3 class="port-description-title">Banking App Interface Concept</h3>
-                                    <p class="port-description-subtitle">App</p>
-                                </div>
+                                <a class="port-item-link" href="/">
+                                    <img src="./images/port1.jpeg" alt="Banking App Interface Concept" >
+                                    <div class="port-description">
+                                        <h3 class="port-description-title">Banking App Interface Concept</h3>
+                                        <p class="port-description-subtitle">App</p>
+                                    </div>
+                                </a>
                             </li>
                             <li class="port-list-item">
-                                <img src="./images/port2.jpeg" alt="Cashless Payment" >
-                                <div class="port-description">
-                                    <h3 class="port-description-title">Banking App Interface Concept</h3>
-                                    <p>App</p>
-                                </div>
+                                <a class="port-item-link" href="/">
+                                    <img src="./images/port2.jpeg" alt="Cashless Payment" >
+                                    <div class="port-description">
+                                        <h3 class="port-description-title">Banking App Interface Concept</h3>
+                                        <p>App</p>
+                                    </div>
+                                </a>
                             </li>
                             <li class="port-list-item">
-                                <img src="./images/port3.jpeg" alt="Meditation App" >
-                                <div class="port-description">
-                                    <h3 class="port-description-title">Banking App Interface Concept</h3>
-                                    <p>App</p>
-                                </div>
+                                <a class="port-item-link" href="/">
+                                    <img src="./images/port3.jpeg" alt="Meditation App" >
+                                    <div class="port-description">
+                                        <h3 class="port-description-title">Banking App Interface Concept</h3>
+                                        <p>App</p>
+                                    </div>
+                                </a>    
                             </li>
                             <li class="port-list-item">
-                                <img src="./images/port4.jpeg" alt="Taxi Service">
-                                <div class="port-description">
-                                    <h3 class="port-description-title">Banking App Interface Concept</h3>
-                                    <p>App</p>
-                                </div>
+                                <a class="port-item-link" href="/">
+                                    <img src="./images/port4.jpeg" alt="Taxi Service">
+                                    <div class="port-description">
+                                        <h3 class="port-description-title">Banking App Interface Concept</h3>
+                                        <p>App</p>
+                                    </div>
+                                </a>
                             </li>
                             <li class="port-list-item">
+                                <a class="port-item-link" href="/">
                                 <img src="./images/port5.jpeg" alt="Screen Illustrations" >
                                 <div class="port-description">
                                     <h3 class="port-description-title">Banking App Interface Concept</h3>
                                     <p>App</p>
                                 </div>
+                                </a>
                             </li>
                             <li class="port-list-item">
-                                <img src="./images/port6.jpeg" alt="Online Courses" >
-                                <div class="port-description">
-                                    <h3 class="port-description-title">Banking App Interface Concept</h3>
-                                    <p class="port-description-subtitle">App</p>
-                                </div>
+                                <a class="port-item-link" href="/">
+                                    <img src="./images/port6.jpeg" alt="Online Courses" >
+                                    <div class="port-description">
+                                        <h3 class="port-description-title">Banking App Interface Concept</h3>
+                                        <p class="port-description-subtitle">App</p>
+                                    </div>
+                                </a>
                             </li>
                             <li class="port-list-item">
-                                <img src="./images/port7.jpeg" alt="Instagram Stories Concept" >
-                                <div class="port-description">
-                                    <h3 class="port-description-title">Banking App Interface Concept</h3>
-                                    <p class="port-description-subtitle">App</p>
-                                </div>
+                                <a class="port-item-link" href="/">
+                                    <img src="./images/port7.jpeg" alt="Instagram Stories Concept" >
+                                    <div class="port-description">
+                                        <h3 class="port-description-title">Banking App Interface Concept</h3>
+                                        <p class="port-description-subtitle">App</p>
+                                    </div>
+                                </a>   
                             </li>
                             <li class="port-list-item">
-                                <img src="./images/port8.jpeg" alt="Organic Food">
-                                <div class="port-description">
-                                    <h3 class="port-description-title">Banking App Interface Concept</h3>
-                                    <p class="port-description-subtitle">App</p>
-                                </div>
+                                <a class="port-item-link" href="/">
+                                    <img src="./images/port8.jpeg" alt="Organic Food">
+                                    <div class="port-description">
+                                        <h3 class="port-description-title">Banking App Interface Concept</h3>
+                                        <p class="port-description-subtitle">App</p>
+                                    </div>
+                                </a>
                             </li>
                             <li class="port-list-item">
-                                <img src="./images/port9.jpeg" alt="Fresh Coffee" >
-                                <div class="port-description">
-                                    <h3 class="port-description-title">Banking App Interface Concept</h3>
-                                    <p class="port-description-subtitle">App</p>
-                                </div>
+                                <a class="port-item-link" href="/">
+                                    <img src="./images/port9.jpeg" alt="Fresh Coffee" >
+                                    <div class="port-description">
+                                        <h3 class="port-description-title">Banking App Interface Concept</h3>
+                                        <p class="port-description-subtitle">App</p>
+                                    </div>
+                                </a>
                             </li>
                         </ul>
                     </div>
